# bazel-java-starter

./: .bazelproject  .gitignore  MODULE.bazel  README.md
java/com/example/: BUILD.bazel  Main.java
