module(name = "learning_task_graph")

# Updated versions for Bazel 8.2.1 compatibility
bazel_dep(name = "rules_java", version = "8.11.0")
bazel_dep(name = "rules_jvm_external", version = "6.3")

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")

maven.install(
    artifacts = [
        "com.google.guava:guava:32.1.2-jre",
        # Updated bascomtask artifact
        "com.ebay.bascomtask:bascomtask-core:2.1.0",
    ],
    repositories = [
        "https://repo1.maven.org/maven2",
    ],
    # Add this to avoid duplicate artifacts
    duplicate_version_warning = "none",
)

use_repo(maven, "maven")