load("@rules_java//java:defs.bzl", "java_binary")

java_binary(
    name = "my_app",
    srcs = ["Main.java"],
    main_class = "com.example.Main",
    deps = [
        "@maven//:com_google_guava_guava",
        "@maven//:com_ebay_bascomtask_bascomtask_core",
    ],
    # Add this for Java 21 compatibility
    javacopts = [
        "--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED",
        "--add-exports=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED",
    ],
)